Fix code smell
Signed-off-by: Steven Sheehy <steven.sheehy@swirldslabs.com>